--- a/02-htmlFundamentals/blog.html
+++ b/02-htmlFundamentals/blog.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>BLOG</title>
-  </head>
-  <body>
-    <h2>BLOG</h2>
-    <a href="index.html">Back to home</a>
-  </body>
+<html lang="pt-BR">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Blog</title>
+</head>
+
+<body>
+
+</body>
+
 </html>
