--- a/02-htmlFundamentals/blog.html
+++ b/02-htmlFundamentals/blog.html
@@ -2,14 +2,16 @@
 <html lang="pt-BR">
 
 <head>
+  <title>Blog</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog</title>
+
 </head>
 
 <body>
-
+  <h2>Blog</h2>
+  <a href="index.html">Back to home</a>
 </body>
 
 </html>
