--- a/02-htmlFundamentals/index.html
+++ b/02-htmlFundamentals/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
+<!--linguagem do html-->
+
+
 
 <head>
+  <meta charset="UTF-8"><!-- atributo ao conjunto de tipo de caracter-->
+
   <title>The Basic language of the web: HTML</title>
 </head>
 
@@ -15,63 +20,104 @@
   <h5>The Basic language of the web: HTML </h5>
   <h6>The Basic language of the web: HTML </h6>
   -->
+  <header>
+    <!--cabeçalho da parte superior do site-->
+    <h1>The Code Magazine</h1>
 
-  <h1>The Code Magazine</h1>
-  <p>
-    Posted by <b>Laura Jones</b> on Monday, June 21st 2027
-  </p>
+    <nav>
+      <!-- o elemento "nav" agrupa uma seção que indica a navegação para outra páginas do site com links. Nem todo link deve estar denteo do elemento "nav", um footer podera ter um nav pois contem elementos de navegacao de outras paginas, aside para navegacao do menu-->
+      <a href="blog.html">Blog</a>
+      <a href="#">Challenges</a>
+      <a href="#">Flexbox</a>
+      <a href="#">CSS</a>
+    </nav>
+  </header>
+
+  <article>
+    <header></header>
+    <!--o article refere-se a uma parte independente do conteudo da página, pode conter paragrafos, posts de forum e blogs. Semânticamente é uma tag importante. Pode ser um conteúdo no interior de uma tag "main" -->
+    <h2>The Basic Language of the Web: HTML</h2>
+
+    <img src="img/laura-jones.jpg" alt="Headshot of Laura Jones" width="50" height="50">
+
+    <p>
+      Posted by <b>Laura Jones</b> on Monday, June 21st 2027
+    </p>
+
+    <img src="img/post-img.jpg" alt="html code on a screen" width="500" height="200">
+    <!--src/source  é um atributo fonte do arquivo. Alt um texto alternativo para a imagem, devemos sempre utilizar para questões de busca e acessibilidade-->
+    </header>
+    <p>
+      All modern websites and web applications are built using three <em>fundamentals</em> technologies: HTML, CSS and
+      JavaScript.
+      These are the languages of the web.aa
+    </p>
+    <p>
+      In this post, let's focus on HTML. We will learn what HTML is all about, and why you too should learn it.
+    </p>
 
 
-  <h2>The Basic Language of the Web: HTML</h2>ssss
-  <p>
-    All modern websites and web applications are built using three <em>fundamentals</em> technologies: HTML, CSS and
-    JavaScript.
-    These are the languages of the web.aa
-  </p>
-  <p>
-    In this post, let's focus on HTML. We will learn what HTML is all about, and why you too should learn it.
-  </p>
+    <h3>What is HTML?</h3>
+    <p>
+      HTML stands for <strong>HyperText Markup Language</strong>. It's a markup language that web developers use to
+      structure and describe
+      the content of a webpage (not a programming language).
+    </p>
+    <p>
+      HTML consists of elements that describe different types ofss content: paragraphs, links, headings, images, video,
+      etc.
+      Web browsers understand HTML and render HTML code as websites.
+    </p>
+    <p>In HTML, each element is made up of 3 parts:</p>
+
+    <ol>
+      <!--o navegador renderiza as listas da forma ordenada, mesmo se ocorrer a inclusao de mais um item lista. o significado é ter uma estrutura de forma logica-->
+      <li>First </li>
+      <li>The opening tag</li>
+      <li>The closing tag</li>
+      <li>The actual element</li>
+    </ol>
 
 
-  <h3>What is HTML?</h3>
-  <p>
-    HTML stands for <strong>HyperText Markup Language</strong>. It's a markup language that web developers use to
-    structure and describe
-    the content of a webpage (not a programming language).
-  </p>
-  <p>
-    HTML consists of elements that describe different types ofss content: paragraphs, links, headings, images, video,
-    etc.
-    Web browsers understand HTML and render HTML code as websites.
-  </p>
-  <p>In HTML, each element is made up of 3 parts:</p>
+    <p>
+      You can learn more at the <a href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" target="_blank">MDN Web
+        Docs.
+      </a>
+    </p>
+    <!-- o link é a acnora que recebe uma tag "a" e um atributo que é a "href", e sempre recebera a url.-->
+    <!-- o atributo target é uma forma de fazer o link abrir na mesma guia do navegador.-->
 
-  <ol>
-    <!--o navegador renderiza as listas da forma ordenada, mesmo se ocorrer a inclusao de mais um item lista. o significado é ter uma estrutura de forma logica-->
-    <li>First </li>
-    <li>The opening tag</li>
-    <li>The closing tag</li>
-    <li>The actual element</li>
-  </ol>
+    <h3>Why should you learn HTML</h3>
+    <p>
+      There are countless reasons for learning the fundamental language of the web. Here are 5 of them:
+    </p>
 
-  You can learn more at the MDN Web Docs.
-
-  <h3>Why should you learn HTML?</h3>
-  <p>
-    There are countless reasons for learning the fundamental language of the web. Here are 5 of them:
-  </p>
-
-  <ul>
-    <li>To be able to use the fundamental web dev language</li>
-    <li>To hand-craft beautiful websites instead of relying on tools like Worpress or Wix</li>
-    <li>To build web applications</li>
-    <li>To impress friends</li>
-    <li>To have fun 😃</li>
-  </ul>
-  <p>
-    Hopefully you learned something new here. See you next time!
-  </p>
+    <ul>
+      <li>To be able to use the fundamental web dev language</li>
+      <li>To hand-craft beautiful websites instead of relying on tools like Worpress or Wix</li>
+      <li>To build web applications</li>
+      <li>To impress friends</li>
+      <li>To have fun 😃</li>
+    </ul>
+    <p>
+      Hopefully you learned something new here. See you next time!
+    </p>
+    <!--conteúdo dentro de um elemento-->
+    <footer>
+      Copyright &copy; 2027 by The Code Magazine
+      <!--direitos autorais do site-->
+    </footer>
+  </article>
 </body>
 
+<!--Resumo sobre a semântica de cada elemento html, podemos dizer que cada elemento quer dizer uma coisa, tanto para acessibilidade, como para motores de busca, cada elemento fará uma coisa, poderá ter um significado ou não. Um bom exemplo seria o uso de "div" para tudo, se usarmos div para tudo a estrututa do html nao terá um boa semântica, devemos utilizar nav, article e assim por diante, todos devem ser usados de forma correta. 
+* nav : o nav significa uma navegacao com links, se utilizar uma div será apenas uma caixa, mas semanticamente não está correto. O google é capaz de entender o conteúdo da página web. 
+
+
+
+
+
+
+-->
 
 </html>
