--- a/02-htmlFundamentals/index.html
+++ b/02-htmlFundamentals/index.html
@@ -102,7 +102,15 @@
     <p>
       Hopefully you learned something new here. See you next time!
     </p>
-    <!--conteúdo dentro de um elemento-->
+    <h4>Related posts</h4>
+    <ul>
+      <li><img src="img/related-1.jpg" width="75" height="75"></li>
+
+      <li><img src="img/related-2.jpg" width="75" height="75"></li>
+
+      <li><img src="img/related-3.jpg" width="75" height="75"></li>
+
+    </ul>
     <footer>
       Copyright &copy; 2027 by The Code Magazine
       <!--direitos autorais do site-->
