challenge 1 finished, I just inserted the alt attribute for the images

--- a/02-htmlFundamentals/index.html
+++ b/02-htmlFundamentals/index.html
@@ -104,12 +104,23 @@
     </p>
     <h4>Related posts</h4>
     <ul>
-      <li><img src="img/related-1.jpg" width="75" height="75"></li>
+      <li>
+        <img src="img/related-1.jpg" alt="person programming" width="75" height="75">
+        <a href="#"> How to Learn Web Developement</a>
+        <p>By Jonas Schmedtmamn</p>
+      </li>
 
-      <li><img src="img/related-2.jpg" width="75" height="75"></li>
+      <li>
+        <img src="img/related-2.jpg" alt="lightning" width="75" height="75">
+        <a href="#"> The Unknown Powers of CSS</a>
+        <p>By Jim Dillon</p>
+      </li>
 
-      <li><img src="img/related-3.jpg" width="75" height="75"></li>
-
+      <li>
+        <img src="img/related-3.jpg" alt="code" width="75" height="75">
+        <a href="#"> Why JavaScript at awesome</a>
+        <p>By Matilda</p>
+      </li>
     </ul>
     <footer>
       Copyright &copy; 2027 by The Code Magazine
