challenge finished, I used only html, to style the page it is necessary to apply CSS.

--- a/02-htmlFundamentals/challenge2.html
+++ b/02-htmlFundamentals/challenge2.html
@@ -9,23 +9,18 @@
 </head>
 
 <body>
-  <h1>Converse Chuck Taylor All Star</h1>
-
   <article>
+    <h2>Converse Chuck Taylor All Star</h2>
     <img src="img/challenges.jpg" alt="sneakers all star" width="250" height="250">
     <br>
     <strong>U$65.00</strong>
-
     <p>Free shipping</p>
     <p>Ready to dress up or down, these classic canvas Chucks are and everyday wandrobe staple.</p>
-    <a href="#">More information &#x2192;</a>
+    <a href="https://converse.com.br/">More information &#x2192;</a>
     <!--codigo para aplicar seta-->
-    <br>
 
-    <strong>
-      <p>Product details</p>
-    </strong>
 
+    <h3>Product details</h3>
     <ul>
       <li>Lightweight, durable canvas sneaker</li>
       <li>Lightly padded footbed for added comfort</li>
