main elements for a good semantic html structure

--- a/03cssFundamentals/index.html
+++ b/03cssFundamentals/index.html
@@ -77,7 +77,7 @@
       <li>First </li>
       <li>The opening tag</li>
       <li>The closing tag</li>
-      <li>The actual element</li>
+      <li>The actual element</li>bbbb
     </ol>
 
 
