--- a/03cssFundamentals/index.html
+++ b/03cssFundamentals/index.html
@@ -105,23 +105,23 @@
       Hopefully you learned something new here. See you next time!
     </p>
     <h4>Related posts</h4>
-    <ul>
+    <ul class="related">
       <li>
         <img src="img/related-1.jpg" alt="person programming" width="75" height="75">
         <a href="#"> How to Learn Web Developement</a>
-        <p>By Jonas Schmedtmamn</p>
+        <p class="related-author">By Jonas Schmedtmamn</p>
       </li>
 
       <li>
         <img src="img/related-2.jpg" alt="lightning" width="75" height="75">
         <a href="#"> The Unknown Powers of CSS</a>
-        <p>By Jim Dillon</p>
+        <p class="related-author">By Jim Dillon</p>
       </li>
 
       <li>
         <img src="img/related-3.jpg" alt="code" width="75" height="75">
         <a href="#"> Why JavaScript at awesome</a>
-        <p>By Matilda</p>
+        <p class="related-author">By Matilda</p>
       </li>
     </ul>
     <footer>
