--- a/03cssFundamentals/ChallengeSection03/index.html
+++ b/03cssFundamentals/ChallengeSection03/index.html
@@ -10,30 +10,32 @@
 </head>
 
 <body>
-  <article class="product">
-    <h2 class="product-title">Converse Chuck Taylor All Star</h2>
-    <img
-      src="https://converse.com.br/media/catalog/product/c/t/ct00040002_a_107x1.jpg?optimize=high&bg-color=255,255,255&fit=bounds&height=897&width=960&canvas=960:897"
-      alt="sneakers all star" width="250" height="250">
-    <br>
-    <p class="price"><strong>U$65.00</strong></p>
-    <span class="shipping">Free shipping</span>
-    <p>Ready to dress up or down, these classic canvas Chucks are and everyday wandrobe staple.</p>
-    <a class="more-info" href=" https://converse.com.br/">More information &#x2192;</a>
-    <!--codigo para aplicar seta-->
+  <div class="container-content">
+    <article class="product">
+      <h2 class="product-title">Converse Chuck Taylor All Star</h2>
+      <img
+        src="https://converse.com.br/media/catalog/product/c/t/ct00040002_a_107x1.jpg?optimize=high&bg-color=255,255,255&fit=bounds&height=897&width=960&canvas=960:897"
+        alt="sneakers all star" width="250" height="250">
+      <br>
+      <p class="price"><strong>U$65.00</strong></p>
+      <span class="shipping">Free shipping</span>
+      <p>Ready to dress up or down, these classic canvas Chucks are and everyday wandrobe staple.</p>
+      <a class="more-info" href=" https://converse.com.br/">More information &#x2192;</a>
+      <!--codigo para aplicar seta-->
 
-    <h3 class="details-title">Product details</h3>
-    <ul class="details-list">
-      <li>Lightweight, durable canvas sneaker</li>
-      <li>Lightly padded footbed for added comfort</li>
-      <li>Iconic Chuck Taylor ankle patch.</li>
-    </ul>
+      <h3 class="details-title">Product details</h3>
+      <ul class="details-list">
+        <li>Lightweight, durable canvas sneaker</li>
+        <li>Lightly padded footbed for added comfort</li>
+        <li>Iconic Chuck Taylor ankle patch.</li>
+      </ul>
 
-    <button class="add-cart">
-      Add to cart
-    </button>
-    <br>
-  </article>
+      <button class="add-cart">
+        Add to cart
+      </button>
+      <br>
+    </article>
+  </div>
 </body>
 
 </html>
