some classes have been changed

--- a/03cssFundamentals/ChallengeSection03/index.html
+++ b/03cssFundamentals/ChallengeSection03/index.html
@@ -15,10 +15,10 @@
       <h2 class="product-title">Converse Chuck Taylor All Star</h2>
       <img
         src="https://converse.com.br/media/catalog/product/c/t/ct00040002_a_107x1.jpg?optimize=high&bg-color=255,255,255&fit=bounds&height=897&width=960&canvas=960:897"
-        alt="sneakers all star" width="250" height="250">
-      <br>
+        alt="sneakers all star" width="180" height="180">
+
       <p class="price"><strong>U$65.00</strong></p>
-      <span class="shipping">Free shipping</span>
+      <p class="shipping">Free shipping</p>
       <p>Ready to dress up or down, these classic canvas Chucks are and everyday wandrobe staple.</p>
       <a class="more-info" href=" https://converse.com.br/">More information &#x2192;</a>
       <!--codigo para aplicar seta-->
@@ -31,7 +31,8 @@
       </ul>
 
       <button class="add-cart">
-        Add to cart
+        <p>Add to cart</p>
+
       </button>
       <br>
     </article>
