list alignment and add cart button border

--- a/03cssFundamentals/ChallengeSection03/index.html
+++ b/03cssFundamentals/ChallengeSection03/index.html
@@ -31,6 +31,7 @@
       </ul>
 
       <button class="add-cart">
+        <!--elemento pai é o "article"-->
         <p>Add to cart</p>
 
       </button>
