includes a like button

--- a/03cssFundamentals/index.html
+++ b/03cssFundamentals/index.html
@@ -22,7 +22,6 @@
       <!--cabeçalho da parte superior do site-->
       <h1>The Code Magazine</h1>
       <nav>
-        <strong>navegation </strong>
         <!-- o elemento "nav" agrupa uma seção que indica a navegação para outra páginas do site com links. Nem todo link deve estar denteo do elemento "nav", um footer podera ter um nav pois contem elementos de navegacao de outras paginas, aside para navegacao do menu-->
         <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
@@ -119,6 +118,8 @@
       <p id="copyright">Copyright &copy; 2027 by The Code Magazine</p>
       <!--direitos autorais do site-->
     </footer>
+    <button>❤Like</button>
+    <!--para adc o emoji tecla windowms + ponto-->
   </div>
 </body>
 
