challenge: make promotion label for the product (using pseudo-element: after) and selection of cores for the product.

--- a/03cssFundamentals/ChallengeSection03/index.html
+++ b/03cssFundamentals/ChallengeSection03/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container-content">
     <article class="product">
-      <h2 class="product-title">Converse Chuck Taylor All Star</h2>
+      <h1 class="product-title">Converse Chuck Taylor All Star</h1>
       <img
         src="https://converse.com.br/media/catalog/product/c/t/ct00040002_a_107x1.jpg?optimize=high&bg-color=255,255,255&fit=bounds&height=897&width=960&canvas=960:897"
         alt="sneakers all star" width="180" height="180">
@@ -22,9 +22,16 @@
       <p>Ready to dress up or down, these classic canvas Chucks are and everyday wandrobe staple.</p>
       <a class="more-info" href=" https://converse.com.br/">More information &#x2192;</a>
       <!--codigo para aplicar seta-->
+      <div class="colors">
+        <div class="color color-black"></div>
+        <div class="color color-blue"></div>
+        <div class="color color-red"></div>
+        <div class="color color-yellow"></div>
+        <div class="color color-green"></div>
+        <div class="color color-brown"></div>
+      </div>
 
-      <h3 class="details-title">Product details</h3>
-      <ul class="details-list">
+      <ul class=" details-list">
         <li>Lightweight, durable canvas sneaker</li>
         <li>Lightly padded footbed for added comfort</li>
         <li>Iconic Chuck Taylor ankle patch.</li>
