--- a/03cssFundamentals/index.html
+++ b/03cssFundamentals/index.html
@@ -37,9 +37,9 @@
         <!--o article refere-se a uma parte independente do conteudo da página, pode conter paragrafos, posts de forum e blogs. Semânticamente é uma tag importante. Pode ser um conteúdo no interior de uma tag "main" -->
         <h2>The Basic language index of the Web: HTML</h2>
 
-        <img src="img/laura-jones.jpg" alt="Headshot of Laura Jones" width="50" height="50">
+        <img src="img/laura-jones.jpg" alt="Headshot of Laura Jones" width="50" height="50" class="author-img">
 
-        <p id="author">
+        <p id="author" class="author">
           Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
         </p>
 
